grammar.js
        spec: ($) => repeat($._statements),

        _statements: ($) =>
            choice($._simple_statements, $._compound_statements),

        shell_block: ($) =>
            prec.right(
                repeat1(
                    choice(
                        $.if_statement,
                        $.macro_definition,
                        $.macro_invocation,
                        prec(1, $.macro_expansion),
                        $.string,
                        NEWLINE
                    )
                )
            ),

        runtime_scriptlet: ($) =>
            prec.right(
                seq(
                    choice(
                        '%pre',
                        '%post',
                        '%preun',
                        '%postun',
                        '%pretrans',
                        '%posttrans',
                        '%preuntrans',
                        '%postuntrans',
                        '%verify'
                    ),
                    optional(seq(optional('-n'), $.single_word)),
                    NEWLINE,
                    optional($.shell_block)
                )
            ),

        ///////////////////////////////////////////////////////////////////////
        // Triggers (%triggerin, %triggerun, ...)
        ///////////////////////////////////////////////////////////////////////

        trigger: ($) =>
            prec.right(
                seq(
                    choice(
                        '%triggerprein',
                        '%triggerin',
                        '%triggerun',
                        '%triggerpostun'
                    ),
                    optional(seq(optional('-n'), $.single_word)),
                    NEWLINE,
                    optional($.shell_block)
                )
            ),

        ///////////////////////////////////////////////////////////////////////
        // File triggers (%filetriggerin, %filetriggerun, ...)
        ///////////////////////////////////////////////////////////////////////

        files: ($) =>
            prec.right(
                seq(
                    '%files',
                    optional(seq('-n', $.string)),
                    optional(seq('-f', $.string)),
                    NEWLINE,
                    repeat(choice($.if_statement, $.defattr, $.file))
                )
            ),

        defattr: ($) =>
            seq(
                '%defattr',
                '(',
                choice('-', /[0-9]+/),
                ',',
                /[a-zA-Z]+/,
                ',',
                /[a-zA-Z]+/,
                ')',
                NEWLINE
            ),

        file: ($) =>
            seq(
                optional($.attr),
                optional(
                    seq(
                        choice(
                            '%artifact',
                            '%config',
                            '%dir',
                            '%doc',
                            '%docdir',
                            '%ghost',
                            '%license',
                            '%missingok',
                            '%readme',
                            $.verify
                        ),
                        token.immediate(/( |\t)+/)
                    )
                ),
                $.string,
                NEWLINE
            ),

        attr: ($) =>
            seq(
                choice('%attr'),
                '(',
                choice('-', /[0-9]+/),
                ',',
                /[a-zA-Z]+/,
                ',',
                /[a-zA-Z]+/,
                ')',
                token.immediate(/( |\t)+/)
            ),

        // %verify(not size filedigest mtime) %{prefix}/bin/file
        verify: ($) =>
            seq(
                '%verify',
                token.immediate('('),
                repeat(
                    choice(
                        'filedigest',
                        'group',
                        'maj',
                        'md5',
                        'mode',
                        'min',
                        'mtime',
                        'not',
                        'owner',
                        'size',
                        'symlink'
                    )
                ),
                token.immediate(')')
            ),

        ///////////////////////////////////////////////////////////////////////
        // Changelog Section (%changelog)
        ///////////////////////////////////////////////////////////////////////

        string: ($) =>
            prec(-1, repeat1(seq(choice($.macro_expansion, $.string_content)))),

        string_content: (_) => token(prec(-1, /([^"`%\\\r\n])+/)),

        // TODO: better name
        single_word: ($) =>
            repeat1(choice($.macro_expansion, seq($.string_content))),

        macro_expansion: ($) => choice($._simple_expansion, $._full_expansion),

        _simple_expansion: ($) => seq('%', $.variable_name),

        // %{variable}, %{?variable}, %{variable:argument}
        _full_expansion: ($) =>
            seq(
                '%{',
                choice($._special_variable_name, $.variable_name),
                optional(seq(':', $.string_content)),
                '}'
            ),

        // %(...)
