test/corpus/file_trigger.txt
===============================================================================
Filetriggerin Section (Empty)
===============================================================================

%filetriggerin

-------------------------------------------------------------------------------

(spec
  (file_trigger))

===============================================================================
Filetriggerin Section (subpackage)
===============================================================================

%filetriggerin foo

-------------------------------------------------------------------------------

(spec
  (file_trigger
    (word)))

===============================================================================
Filetriggerin Section (package)
===============================================================================

%filetriggerin -n foo

-------------------------------------------------------------------------------

(spec
  (file_trigger
    (word)))

===============================================================================
Filetriggerin Section (shell)
===============================================================================

%filetriggerin -n nonsense
cat /dev/urandom

-------------------------------------------------------------------------------

(spec
  (file_trigger
    (word)
    (shell_block
      (string
        (string_content)))))
