test/corpus/runtime_scriptlets.txt
===============================================================================
Pre Section (Empty)
===============================================================================

%pre

-------------------------------------------------------------------------------

(spec
  (runtime_scriptlet))

===============================================================================
Pre Section (subpackage)
===============================================================================

%pre foo

-------------------------------------------------------------------------------

(spec
  (runtime_scriptlet
    (single_word)))

===============================================================================
Pre Section (package)
===============================================================================

%pre -n foo

-------------------------------------------------------------------------------

(spec
  (runtime_scriptlet
    (single_word)))

===============================================================================
Pre Section (shell)
===============================================================================

%pre -n nonsense
cat /dev/urandom

-------------------------------------------------------------------------------

(spec
  (runtime_scriptlet
    (single_word)
    (shell_block
      (string
        (string_content)))))
