test/corpus/trigger.txt
===============================================================================
Triggerin Section (Empty)
===============================================================================

%triggerin

-------------------------------------------------------------------------------

(spec
  (trigger))

===============================================================================
Triggerin Section (subpackage)
===============================================================================

%triggerin foo

-------------------------------------------------------------------------------

(spec
  (trigger
    (single_word)))

===============================================================================
Triggerin Section (package)
===============================================================================

%triggerin -n foo

-------------------------------------------------------------------------------

(spec
  (trigger
    (single_word)))

===============================================================================
Triggerin Section (shell)
===============================================================================

%triggerin -n nonsense
cat /dev/urandom

-------------------------------------------------------------------------------

(spec
  (trigger
    (single_word)
    (shell_block
      (string
        (string_content)))))
